Mon Nov  8 12:58:24 2004  Chad Elliott  <elliott_c@ociweb.com>

        * DAnCE/tests/NodeApplicationTest/NodeAppTest.mpc:

          Fixed build ordering to match library requirements.

        * ciao/StandardConfigurator_Impl.h:

          Removed the StandardConfigurator_Impl:: prefix on the configure
          method (gcc 3.4.1 did not like it).

Fri Nov  5 09:55:28 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * performance-tests/Benchmark/RoundTrip/client.cpp:

          The svc.conf file passed in to the client was not being passed
          to the ORB as ACE::Get_Opt ate up the argument before being
          passed to the client ORB. This fixes this error at the client
          side temporarily by initializing the ORB before parsing the
          arguments. Thanks to Abhi <abhi@qualcomm.com> for reporting
          this.

Thu Nov  4 09:31:29 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/RepositoryManager/Update_Plan.cpp:

          Made changes to fix some build warnings.
          Thanks to Chad Elliot <elliott_c@ociweb.com> for reporting
          this warning.

Wed Nov  3 16:32:54 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ExecutorMappingGenerator.cpp:

          Added generation of newline before each operation
          parameter so each one will be on a separate line.
          It was discovered that the VC 7.1 lexer truncates lines
          longer than 1024 characters.

Wed Nov  3 22:32:18 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * CIDLC/ServantSourceGenerator.cpp (namespace):

          VC6 error fixes. Grr...!

Wed Nov  3 12:38:21 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/RepositoryManager/Update_Plan.cpp:
        * DAnCE/RepositoryManager/Update_Plan.h:

          Made changes to handle multiple component instances
          deployment.

Tue Nov  2 17:26:42 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantHeaderGenerator.cpp: