@@ -3031,11 +3031,13 @@ namespace
           return_type_name_emitter_ (c.os ()),
           enclosing_type_name_emitter_ (c.os ()),
           simple_type_name_emitter_ (c.os ()),
+          type_name_emitter_ (c.os ()),
           scope_ (home)
       {
         returns_.node_traverser (return_type_name_emitter_);
         enclosing_manages_.node_traverser (enclosing_type_name_emitter_);
         simple_manages_.node_traverser (simple_type_name_emitter_);
+        manages_.node_traverser (type_name_emitter_);
       }
 
       virtual void
@@ -3118,7 +3120,7 @@ namespace
 
         os << "ACE_CHECK_RETURN (";
 
-        Traversal::HomeFactory::returns (hf, returns_);
+        Traversal::Home::manages (scope_, manages_);
 
         os << "::_nil ());" << endl;
 
@@ -3142,7 +3144,7 @@ namespace
 
         os << "ACE_CHECK_RETURN (";
 
-        Traversal::HomeFactory::returns (hf, returns_);
+        Traversal::Home::manages (scope_, manages_);
 
         os << "::_nil ());" << endl;
 
@@ -3163,9 +3165,11 @@ namespace
       ReturnTypeNameEmitter return_type_name_emitter_;
       EnclosingTypeNameEmitter enclosing_type_name_emitter_;
       SimpleTypeNameEmitter simple_type_name_emitter_;
+      TypeNameEmitter type_name_emitter_;
       Traversal::Returns returns_;
       Traversal::Manages enclosing_manages_;
       Traversal::Manages simple_manages_;
+      Traversal::Manages manages_;
       SemanticGraph::Home& scope_;
     };
 
