@@ -1,3 +1,11 @@
+Tue Nov  9 14:20:31 2004  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * CIDLC/ServantSourceGenerator.cpp:
+        
+          Fixed incorrect code generation for home factory operations.
+          Thanks to Chad Elliott <elliott_c@ociweb.com> for pointing
+          out the mistake.
+
 Mon Nov  8 12:58:24 2004  Chad Elliott  <elliott_c@ociweb.com>
 
         * DAnCE/tests/NodeApplicationTest/NodeAppTest.mpc:
